Moved from mapped byte buffer with Unsafe Cleaner hack to incubating foreign memory access api JEP 393