@@ -5,10 +5,10 @@
 	<artifactId>sejda-io</artifactId>
 	<packaging>jar</packaging>
 	<name>sejda-io</name>
-	<version>2.1.4-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 
 	<description>An Input/Output layer built on top of Java standard io and nio packages</description>
-	<url>http://www.sejda.org</url>
+	<url>https://www.sejda.org</url>
 
 	<issueManagement>
 		<system>GitHub</system>
@@ -17,7 +17,7 @@
 
 	<organization>
 		<name>sejda</name>
-		<url>http://www.sejda.org</url>
+		<url>https://www.sejda.org</url>
 	</organization>
 
 	<licenses>
@@ -89,7 +89,7 @@
 						<configuration>
 							<toolchains>
 								<jdk>
-									<version>8</version>
+									<version>17</version>
 								</jdk>
 							</toolchains>
 						</configuration>
@@ -165,8 +165,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>17</release>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -198,6 +197,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>--enable-preview --add-opens org.sejda.io/org.sejda.io=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -215,19 +217,19 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>4.1.0</version>
+			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
